Get wallet and add to wallet

--- a/TradingClient/TradingClient.Business.Logic/TradingClient.Business.Logic.csproj
+++ b/TradingClient/TradingClient.Business.Logic/TradingClient.Business.Logic.csproj
@@ -5,8 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Implementations\" />
-    <Folder Include="Interfaces\" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TradingClient.Common.Dto\TradingClient.Common.Dto.csproj" />
   </ItemGroup>
 
 </Project>
