--- a/Trading/Trading.Web.Api/Trading.Web.Api.csproj
+++ b/Trading/Trading.Web.Api/Trading.Web.Api.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>5ca8aec5-cea8-4bee-b5db-5b4649958d3c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <ItemGroup>
