--- a/TradingClient/TradingClient.Presentation.Website/TradingClient.Presentation.Website.csproj
+++ b/TradingClient/TradingClient.Presentation.Website/TradingClient.Presentation.Website.csproj
@@ -10,6 +10,16 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TradingClient.Business.Logic\TradingClient.Business.Logic.csproj" />
+    <ProjectReference Include="..\TradingClient.Common.Dto\TradingClient.Common.Dto.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\NewFolder\" />
   </ItemGroup>
 
 </Project>
