--- a/TradingClient/TradingClient.Presentation.Website/appsettings.Development.json
+++ b/TradingClient/TradingClient.Presentation.Website/appsettings.Development.json
@@ -1,9 +1,5 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "ConnectionStrings": {
+    "TradingApiURL": "https://localhost:44364/api/v1.0/"
   }
 }
