--- a/TradingClient/TradingClient.Presentation.Website/appsettings.json
+++ b/TradingClient/TradingClient.Presentation.Website/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "TradingApiURL": "https://localhost:44364/api/v1.0/"
-  }
+  "AllowedHosts": "*"
 }
